# mcp-obsidian

./: Cargo.toml  README.md  install.ps1
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-29-obsidian-mcp.md
docs/superpowers/specs/: 2026-06-29-obsidian-mcp-design.md
src/: config.rs  graph.rs  lib.rs  main.rs  vault.rs
src/parse/: frontmatter.rs  mod.rs  tags.rs  wikilink.rs
src/tools/: graph.rs  links.rs  mod.rs  read.rs  search.rs  templates.rs  write.rs
tests/: integration.rs
tests/fixtures/test-vault/: note1.md  note2.md  note3.md
tests/fixtures/test-vault/templates/: meeting.md
